--- a/Squiggle/Base.lproj/MainMenu.xib
+++ b/Squiggle/Base.lproj/MainMenu.xib
@@ -45,6 +45,7 @@
                 <rect key="frame" x="49" y="77" width="480" height="270"/>
                 <autoresizingMask key="autoresizingMask"/>
             </view>
+            <point key="canvasLocation" x="416" y="206"/>
         </window>
     </objects>
 </document>
