--- a/Squiggle/Base.lproj/MainMenu.xib
+++ b/Squiggle/Base.lproj/MainMenu.xib
@@ -23,14 +23,18 @@
         <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
         <menu id="TJy-2w-Kgx">
             <items>
-                <menuItem title="Set Gesture" keyEquivalent="t" id="XdE-io-Q6i">
+                <menuItem title="Setup Frenk" id="XdE-io-Q6i">
+                    <modifierMask key="keyEquivalentModifierMask"/>
                     <connections>
                         <action selector="menuSetGesture:" target="Voe-Tx-rLC" id="tgS-ts-A9b"/>
                     </connections>
                 </menuItem>
-                <menuItem title="Quit" keyEquivalent="q" id="02V-7H-cuf">
+                <menuItem title="About" id="02V-7H-cuf">
+                    <modifierMask key="keyEquivalentModifierMask"/>
+                </menuItem>
+                <menuItem title="Quit" keyEquivalent="q" id="TPI-4X-lCs">
                     <connections>
-                        <action selector="nemuQuit:" target="Voe-Tx-rLC" id="sVw-HU-74S"/>
+                        <action selector="nemuQuit:" target="Voe-Tx-rLC" id="ygE-l4-rFT"/>
                     </connections>
                 </menuItem>
             </items>
