--- a/Squiggle/Base.lproj/MainMenu.xib
+++ b/Squiggle/Base.lproj/MainMenu.xib
@@ -21,19 +21,13 @@
         <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
         <menu id="TJy-2w-Kgx">
             <items>
-                <menuItem title="Setup a gesture" id="XdE-io-Q6i">
-                    <modifierMask key="keyEquivalentModifierMask"/>
-                    <connections>
-                        <action selector="menuSetGesture:" target="Voe-Tx-rLC" id="tgS-ts-A9b"/>
-                    </connections>
-                </menuItem>
-                <menuItem title="Change password" id="02V-7H-cuf">
+                <menuItem title="Setup Frenk" id="02V-7H-cuf">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <connections>
                         <action selector="openSettings:" target="Voe-Tx-rLC" id="3Ca-kR-fLS"/>
                     </connections>
                 </menuItem>
-                <menuItem title="About Frenk" id="kRI-u9-KoL">
+                <menuItem title="About" id="kRI-u9-KoL">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <connections>
                         <action selector="openAbout:" target="Voe-Tx-rLC" id="F8L-rc-MnV"/>
